# fem

./: CMakeLists.txt
include/: elliptic_solver.h  mesh.h
src/: elliptic_solver.c  mesh.c
tests/: test_elliptic_solver.c  test_mesh.c
